fix(landing): icons are visible on safari
Related #89

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -126,6 +126,11 @@ small
   .sh3 { font-size: 18px; }
   .stxt { font-size: 16px; line-height: 22px;}
 }
+
+.icon-20 {
+    width: 20px;
+    height: 20px;
+}
 /* endregion site narrative styles */
 
 a {
